# permission_check

./: README.md  permission_check.py  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
permission_check/: permission_check.py
permission_check/tests/: test_permission_check.py
tests/: test_permission_check.py
utils/: __init__.py
